--- a/index.html
+++ b/index.html
@@ -4,9 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Odin Project - Recipe Assignment</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>The Odin Project</h1>
-    <a href="./recipes/pizza.html">Pizza Recipe</a>
+    <header>
+        <h1>The Odin Project - Recipe Assignment</h1>
+    </header>
+    
+    <div id="container">
+        <div class="card">
+            <div class="card-details">
+                <span class="tag">food</span>
+                <span class="tag">italy</span>
+                <div>
+                    <h2>Pizza</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo dolorum ad consectetur expedita rerum quibusdam ipsum, beatae quo libero fugit tempore itaque, illum quidem nesciunt nam doloribus a similique vitae.</p>
+                </div>
+                <div id="buttons">
+                    <button class="button" role="button">Pizza Recipe</button>
+                </div>
+            </div>
+        </div>
+        
+        <div class="card">
+            <div class="card-details">
+                <span class="tag">food</span>
+                <span class="tag">scotland</span>
+                <div>
+                    <h2>Haggis</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo dolorum ad consectetur expedita rerum quibusdam ipsum, beatae quo libero fugit tempore itaque, illum quidem nesciunt nam doloribus a similique vitae.</p>
+                </div>
+                <div id="buttons">
+                    <button class="button" role="button">Pizza Recipe</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-details">
+                <span class="tag">food</span>
+                <span class="tag">canada</span>
+                <div>
+                    <h2>Poutine</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo dolorum ad consectetur expedita rerum quibusdam ipsum, beatae quo libero fugit tempore itaque, illum quidem nesciunt nam doloribus a similique vitae.</p>
+                </div>
+                <div id="buttons">
+                    <button class="button" role="button" onclick="testFunction()">Pizza Recipe</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        Created by DJ Cartwright @ <a href="mailto:dj.cartwright.web@gmail.com">dj.cartwright.web@gmail.com</a>
+    </footer>
+
+    <script>
+        function testFunction() {
+            window.location.href = "./recipes/pizza.html";
+        }
+    </script>
 </body>
 </html>
