create recipe pages and prepare to add pictures and recipes

--- a/recipes/poutine.html
+++ b/recipes/poutine.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="recipe">
-            <h1>Pizza Recipe</h1>
+            <h1>Poutine Recipe</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim consectetur animi asperiores dolor adipisci impedit optio pariatur porro, fugiat minus quo, maxime cum nobis temporibus eligendi mollitia, sed tempore vel! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem minima eum cupiditate, itaque natus at magnam temporibus magni corporis quod, nam harum est incidunt, pariatur omnis ea! Vero, aspernatur est. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi mollitia quia nostrum aliquam velit eius totam reiciendis, quidem in nemo doloremque sit incidunt maxime harum molestias expedita eaque cumque. Architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio eaque animi est consequuntur ipsum architecto laboriosam perferendis facilis, itaque, ea adipisci! Sunt blanditiis, necessitatibus amet rem veritatis impedit fugiat a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae provident eos nemo, nulla expedita quis doloribus ullam sint possimus? Suscipit sit deserunt, maxime molestiae id tempore sed veritatis assumenda aspernatur!</p>
         </div>
     </div>
