--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>The Odin Project - Recipe Assignment</h1>
     </header>
     
-    <div id="container">
+    <div class="container">
         <div class="card">
             <div class="card-details">
                 <span class="tag">food</span>
@@ -21,7 +21,7 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo dolorum ad consectetur expedita rerum quibusdam ipsum, beatae quo libero fugit tempore itaque, illum quidem nesciunt nam doloribus a similique vitae.</p>
                 </div>
                 <div id="buttons">
-                    <button class="button" role="button">Pizza Recipe</button>
+                    <button class="button" role="button" onclick="pizza()">Pizza Recipe</button>
                 </div>
             </div>
         </div>
@@ -35,7 +35,7 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo dolorum ad consectetur expedita rerum quibusdam ipsum, beatae quo libero fugit tempore itaque, illum quidem nesciunt nam doloribus a similique vitae.</p>
                 </div>
                 <div id="buttons">
-                    <button class="button" role="button">Pizza Recipe</button>
+                    <button class="button" role="button" onclick="haggis()">Haggis Recipe</button>
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo dolorum ad consectetur expedita rerum quibusdam ipsum, beatae quo libero fugit tempore itaque, illum quidem nesciunt nam doloribus a similique vitae.</p>
                 </div>
                 <div id="buttons">
-                    <button class="button" role="button" onclick="testFunction()">Pizza Recipe</button>
+                    <button class="button" role="button" onclick="poutine()">Poutine Recipe</button>
                 </div>
             </div>
         </div>
@@ -59,9 +59,19 @@
     </footer>
 
     <script>
-        function testFunction() {
+        function pizza() {
             window.location.href = "./recipes/pizza.html";
         }
+
+        function haggis() {
+            window.location.href = "./recipes/haggis.html";
+        }
+
+
+        function poutine() {
+            window.location.href = "./recipes/poutine.html";
+        }
+
     </script>
 </body>
 </html>
