complete front page with links all set up for recipe pages

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span class="tag">italy</span>
                 <div>
                     <h2>Pizza</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo dolorum ad consectetur expedita rerum quibusdam ipsum, beatae quo libero fugit tempore itaque, illum quidem nesciunt nam doloribus a similique vitae.</p>
+                    <img src="./pizza.png">
                 </div>
                 <div id="buttons">
                     <button class="button" role="button" onclick="pizza()">Pizza Recipe</button>
@@ -32,7 +32,7 @@
                 <span class="tag">scotland</span>
                 <div>
                     <h2>Haggis</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo dolorum ad consectetur expedita rerum quibusdam ipsum, beatae quo libero fugit tempore itaque, illum quidem nesciunt nam doloribus a similique vitae.</p>
+                    <img src="./haggis.png">
                 </div>
                 <div id="buttons">
                     <button class="button" role="button" onclick="haggis()">Haggis Recipe</button>
@@ -46,7 +46,7 @@
                 <span class="tag">canada</span>
                 <div>
                     <h2>Poutine</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo dolorum ad consectetur expedita rerum quibusdam ipsum, beatae quo libero fugit tempore itaque, illum quidem nesciunt nam doloribus a similique vitae.</p>
+                    <img src="./poutine.png">
                 </div>
                 <div id="buttons">
                     <button class="button" role="button" onclick="poutine()">Poutine Recipe</button>
