complete assignment with css

--- a/recipes/haggis.html
+++ b/recipes/haggis.html
@@ -10,7 +10,14 @@
     <div class="container">
         <div class="recipe">
             <h1>Haggis Recipe</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim consectetur animi asperiores dolor adipisci impedit optio pariatur porro, fugiat minus quo, maxime cum nobis temporibus eligendi mollitia, sed tempore vel! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem minima eum cupiditate, itaque natus at magnam temporibus magni corporis quod, nam harum est incidunt, pariatur omnis ea! Vero, aspernatur est. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi mollitia quia nostrum aliquam velit eius totam reiciendis, quidem in nemo doloremque sit incidunt maxime harum molestias expedita eaque cumque. Architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio eaque animi est consequuntur ipsum architecto laboriosam perferendis facilis, itaque, ea adipisci! Sunt blanditiis, necessitatibus amet rem veritatis impedit fugiat a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae provident eos nemo, nulla expedita quis doloribus ullam sint possimus? Suscipit sit deserunt, maxime molestiae id tempore sed veritatis assumenda aspernatur!</p>
+            <div>
+                <ol>
+                   <li>Yeast: I use Platinum Yeast from Red Star. I have the best results when I use this instant yeast. The Platinum yeast is fantastic because its careful formula strengthens your dough and makes making working with yeast simple. You only need 1 standard packet of yeast (2 and 1/4 teaspoons) to get the job done.</li>
+                   <li>Water: I tested this pizza dough recipe with different amounts of water. 1 and 1/3 cups is the perfect amount. Use warm water to cut down on rise time, about 100-110°F. Anything over 130ºF kills the yeast.</li>
+                   <li>Flour: Use unbleached all-purpose white flour in this recipe. Bleaching the flour strips away some of the protein, which will affect how much water the flour absorbs. You can substitute bread flour for a chewier pizza crust. If you love whole grain bread, try this whole wheat pizza dough instead.</li>
+                   <li>Oil: A couple Tablespoons of extra virgin olive oil adds wonderful flavor to the dough. Don’t forget to brush the dough with olive oil before adding the toppings, which prevents the crust from tasting soggy.</li>
+                </ol>    
+            </div>
         </div>
     </div>
     <a href="./../index.html"><< back</a>
